# hatchery

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  DEVELOPMENT.md  DIRECTION.md  MIGRATION_PLAN.md  MVP_PLAN.md  OPERATIONS.md  PRODUCT_STRATEGY.md  README.md  SECURITY.md  TECH_SPEC.md  compose.yaml  dev.sh  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  technical_proposal.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260404_0001_initial_mvp.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  ai.py  auth.py  dependencies.py  eggs.py  panels.py  projects.py  users.py
backend/app/core/: __init__.py  config.py  constants.py  db.py  rate_limit.py  security.py
backend/app/models/: __init__.py  ai_config.py  egg.py  mod.py  panel.py  project.py  user.py
backend/app/services/: __init__.py  ai_service.py  export_service.py  modpack_service.py  modrinth_service.py  panel_service.py  quest_service.py
backend/tests/: conftest.py  test_api.py  test_auth_mode.py  test_health.py  test_rate_limit.py  test_security.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/eggs/: EditEggDialog.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: card.tsx  use-toast.tsx
frontend/src/lib/: api.ts  auth-callback.tsx  auth-config.ts  auth-provider.tsx  auth.ts  auth.tsx  use-auth.ts  utils.ts
frontend/src/mockups/projects/: BRUTALIST.md  GLASS.md  GRIMOIRE.md  README.md  TERMINAL.md  VIOLET_MODERN.md  index.tsx
frontend/src/mockups/projects/v1/: ProjectsPage.tsx  styles.css
frontend/src/mockups/projects/v2/: ProjectsPage.tsx  styles.css
frontend/src/mockups/projects/v3/: ProjectsPage.tsx  styles.css
frontend/src/mockups/projects/v4/: ProjectsPage.tsx  styles.css
frontend/src/mockups/projects/v5/: ProjectsPage.tsx  styles.css
frontend/src/pages/: DashboardPage.tsx  EggDetailPage.tsx  EggsPage.tsx  LoginPage.tsx  PanelsPage.tsx  RegisterPage.tsx  SettingsPage.tsx
