[project]
name = "hatchery-backend"
version = "0.2.0"
description = "Hatchery backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.6",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "sqlmodel>=0.0.38",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "PyJWT>=2.12.1",
    "python-multipart>=0.0.26",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
]

[tool.ruff]
target-version = "py312"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    "alembic/versions",
    "legacy",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

# Ignore these rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for FastAPI Depends)
    "B904",   # raise from (too strict for simple cases)
    "ARG001", # unused function argument (common in FastAPI endpoints)
    "ARG002", # unused method argument
    "SIM102", # Use a single if statement (nested ifs can be more readable)
    "SIM103", # Return condition directly (explicit is better)
]

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports and assertions
"tests/**/*.py" = ["F401", "F811"]
# Init files can have unused imports (for re-exports)
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "legacy/",
    ".venv/",
    "alembic/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
