[project]
name = "hatchery-backend"
version = "0.2.0"
description = "Hatchery backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlmodel>=0.0.39",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "PyJWT>=2.12.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by the formatter)
    "B008", # function call in argument default (required by FastAPI Depends)
    "B904", # raise ... from ... (noisy for plain HTTP error translation)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
